--- a/scripts/install
+++ b/scripts/install
@@ -84,7 +84,7 @@ if [ "$TARGET" = target ] ; then
 
   if [ -d $PKG_DIR/system.d ]; then
     mkdir -p $INSTALL/usr/lib/systemd/system
-    cp $PKG_DIR/system.d/*.* $INSTALL/usr/lib/systemd/system
+    cp -Pr $PKG_DIR/system.d/*.* $INSTALL/usr/lib/systemd/system
   fi
 
   if [ -d $PKG_DIR/udev.d ]; then
